Fixed logger.  Added board rotations (just 2 for now) to C# and camera logic. The robot does not need any extra logic (though the board didn't line up perfectly with the same marks). Fixed loading game. Fixed some TCP connectivity issues. Handled noise from camera as best as possible.

--- a/RoboChess/RoboChess.csproj
+++ b/RoboChess/RoboChess.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Helpers\CommandWithNoCondition.cs" />
     <Compile Include="Converters\Converters.cs" />
     <Compile Include="Helpers\ViewModelLocator.cs" />
+    <Compile Include="RobotBoardRotation.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
